# openfoia

./: .gitignore  LICENSE  README.md  config.example.json  pyproject.toml
openfoia/: __init__.py  agent.py  browser.py  campaign.py  cli.py  config.py  db.py  models.py  server.py  templates.py
openfoia/gateways/: __init__.py  base.py  email.py  fax.py  mail.py
openfoia/pipeline/: __init__.py  extract.py  ingest.py  ocr.py
