[project]
name = "openfoia"
version = "0.1.0"
description = "Crowdsourced FOIA automation with AI-powered document analysis"
readme = "README.md"
license = "AGPL-3.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.0",
    "pytesseract>=0.3.10",
    "pdf2image>=1.16.0",
    "pypdf>=3.17.0",
    "python-docx>=1.1.0",
    "aiofiles>=23.2.0",
    "apscheduler>=3.10.0",
    "twilio>=8.10.0",  # Fax gateway
    "lob>=6.0.0",       # Physical mail gateway
    "anthropic>=0.18.0",
    "openai>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[project.scripts]
openfoia = "openfoia.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
